Fix 00 in form prices and columns spans nowrap

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10038,3 +10038,7 @@ h3 {
 .input-price {
   width: 40px;
 }
+
+.input-category-name {
+  width: 250px;
+}
