--- a/resources/sass/_form.scss
+++ b/resources/sass/_form.scss
@@ -6,3 +6,7 @@
 .input-price {
   width: 40px;
 }
+
+.input-category-name {
+  width: 250px;
+}
